# AOC-2024

./: Cargo.toml  README.md  make_configs.py
day-01/: day-01.py  day-01.rs
day-02/: day-02.py  day-02.rs
day-03/: day-03.py  day-03.rs
day-04/: day-04.py  day-04.rs
day-05/: day-05.py  day-05.rs
day-06/: day-06.py  day-06.rs  test.rs
day-07/: day-07.py  day-07.rs
day-08/: day-08.py  day-08.rs
day-09/: day-09.py  day-09.rs
day-1/: day-1.rs
day-10/: day-10.py
day-11/: day-11.py
day-12/: day-12.py
day-13/: day-13.py
day-14/: day-14.py
day-15/: day-15.py
day-16/: day-16.py
day-17/: day-17.py
day-18/: day-18.py
day-19/: day-19.py
day-20/: day-20.py
day-21/: day-21.py
day-22/: day-22.py
day-23/: day-23.py
day-24/: day-24.py
day-25/: day-25.py
