[package]
name = "AOC-2024"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day1"
path = "day-01/day-01.rs"

[[bin]]
name = "day2"
path = "src/day-02.rs"

[[bin]]
name = "day3"
path = "src/day-03.rs"

[[bin]]
name = "day4"
path = "src/day-04.rs"

[[bin]]
name = "day5"
path = "src/day-05.rs"

[[bin]]
name = "day6"
path = "src/day-06.rs"

[[bin]]
name = "day7"
path = "src/day-07.rs"

[[bin]]
name = "day8"
path = "src/day-08.rs"

[[bin]]
name = "day9"
path = "src/day-09.rs"

[[bin]]
name = "day10"
path = "src/day-10.rs"

[[bin]]
name = "day11"
path = "src/day-11.rs"

[[bin]]
name = "day12"
path = "src/day-12.rs"

[[bin]]
name = "day13"
path = "src/day-13.rs"

[[bin]]
name = "day14"
path = "src/day-14.rs"

[[bin]]
name = "day15"
path = "src/day-15.rs"

[[bin]]
name = "day16"
path = "src/day-16.rs"

[[bin]]
name = "day17"
path = "src/day-17.rs"

[[bin]]
name = "day18"
path = "src/day-18.rs"

[[bin]]
name = "day19"
path = "src/day-19.rs"

[[bin]]
name = "day20"
path = "src/day-20.rs"

[[bin]]
name = "day21"
path = "src/day-21.rs"

[[bin]]
name = "day22"
path = "src/day-22.rs"

[[bin]]
name = "day23"
path = "src/day-23.rs"

[[bin]]
name = "day24"
path = "src/day-24.rs"

[[bin]]
name = "day25"
path = "src/day-25.rs"
