[package]
name = "AOC-2024"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day1"
path = "day-01/day-01.rs"

[[bin]]
name = "day2"
path = "day-02/day-02.rs"

[[bin]]
name = "day3"
path = "day-03/day-03.rs"

[[bin]]
name = "day4"
path = "day-04/day-04.rs"

[[bin]]
name = "day5"
path = "day-05/day-05.rs"

[[bin]]
name = "day6"
path = "day-06/day-06.rs"

[[bin]]
name = "day7"
path = "day-07/day-07.rs"

[[bin]]
name = "day8"
path = "day-08/day-08.rs"

[[bin]]
name = "day9"
path = "day-09/day-09.rs"

[[bin]]
name = "day10"
path = "day-10/day-10.rs"

[[bin]]
name = "day11"
path = "day-11/day-11.rs"

[[bin]]
name = "day12"
path = "day-12/day-12.rs"

[[bin]]
name = "day13"
path = "day-13/day-13.rs"

[[bin]]
name = "day14"
path = "day-14/day-14.rs"

[[bin]]
name = "day15"
path = "day-15/day-15.rs"

[[bin]]
name = "day16"
path = "day-16/day-16.rs"

[[bin]]
name = "day17"
path = "day-17/day-17.rs"

[[bin]]
name = "day18"
path = "day-18/day-18.rs"

[[bin]]
name = "day19"
path = "day-19/day-19.rs"

[[bin]]
name = "day20"
path = "day-20/day-20.rs"

[[bin]]
name = "day21"
path = "day-21/day-21.rs"

[[bin]]
name = "day22"
path = "day-22/day-22.rs"

[[bin]]
name = "day23"
path = "day-23/day-23.rs"

[[bin]]
name = "day24"
path = "day-24/day-24.rs"

[[bin]]
name = "day25"
path = "day-25/day-25.rs"

[dependencies]
itertools = "0.13.0"
rayon = "1.10.0"
regex = "1.11.1"
